# web-bookmarks-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  file.rs  main.rs
