[package]
name = "open"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
dirs = "4.0.0"
pcre2 = "0.2.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
webbrowser = "0.8.2"
